added select hp nm

--- a/backend/wp-content/themes/rschip/.htaccess
+++ b/backend/wp-content/themes/rschip/.htaccess
@@ -5,5 +5,8 @@ RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{HTTP:X-Forwarded-Proto} !=https
+RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 RewriteRule . /index.php [L]
+
 </IfModule>
